[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-downloader"
version = "1.0.0"
description = "A CLI tool to download video and audio from various web sources."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp",
    "click",
    "rich"
]

[project.scripts]
video-download = "video_downloader.cli:main"
